projects/compiler/test/typechecker/noreturn/error_unreachable_stmt.abra
func foo() {
  unreachable("a")

  val a = 1
}